# strands-gcuk

./: .gitignore  AGENTCORE_MEMORY_SETUP.md  Dockerfile  FRONTEND_DEPLOYMENT.md  MIGRATION_SUMMARY.md  OBSERVABILITY.md  README.md  __init__.py  agent.py  agent_cli.py  agentcore_runtime_service.py  api.py  buildspec.yaml  custom_agent.py  debug_agentcore_client.py  debug_agentcore_import.py  deploy-frontend.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  runtime_agent_main.py  test_agent.py  test_agentcore_memory.py  test_credentials.py  test_memory_client_init.py  update-lambda.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: buildspec.yaml  ci-cd.yml  python-tests.yml
infrastructure/: frontend-infrastructure.yaml  lambda-requirements.txt
lambda/: agentcore_proxy.py  simple_agentcore_proxy.py  simple_proxy.py
static-frontend/: index.html
templates/: chat.html  chat_ui.html  connect.html  error_page.html  index.html  logged_out.html  login_page.html  response.html
templates/static/css/: green_cross_chat_styles.css
tests/: README.md  test_api.py  test_infrastructure.py  test_lambda_function.py
