[project]
name = "strands-agent-service"
version = "0.1.0"
description = "Strands Agent for AgentCore"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=1.1.0",
    "strands-agents-tools>=0.2.2",
    "anyio",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "requests",
    "markdown"
]

[tool.setuptools]
py-modules = ["agent"]