[project]
name = "agentcore-agent-cli"
version = "0.1.0"
description = "Simple CLI for AgentCore Agent with custom tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentcore",
    "anyio",
    "fastapi==0.115.12",
    "jinja2",
    "itsdangerous",
    "markdown",
    "python-dotenv",
    "uvicorn",
]

[project.scripts]
agentcore-agent = "agent_cli:cli"

[tool.setuptools]
py-modules = ["agent_cli"]
